--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,27 @@
-# Compiled class file
-*.class
+# Java/Android 기본
+*.iml
+.gradle/
+.idea/
+local.properties
+.DS_Store
+/build/
+captures/
+.cxx/
 
-# Log file
+# Kotlin 관련 (있을 경우)
+*.kotlin_module
+
+# 로그/임시 파일
 *.log
+*.tmp
 
-# BlueJ files
-*.ctxt
+# OS별
+# macOS
+.DS_Store
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# Android Studio 자동 생성 파일
+.externalNativeBuild/
