--- a/ChatApp_1to1/.gitignore
+++ b/ChatApp_1to1/.gitignore
@@ -1,15 +1,27 @@
+# Java/Android 기본
 *.iml
-.gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-.DS_Store
-/build
-/captures
-.externalNativeBuild
-.cxx
+.gradle/
+.idea/
 local.properties
+.DS_Store
+/build/
+captures/
+.cxx/
+
+# Kotlin 관련 (있을 경우)
+*.kotlin_module
+
+# 로그/임시 파일
+*.log
+*.tmp
+
+# OS별
+# macOS
+.DS_Store
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Android Studio 자동 생성 파일
+.externalNativeBuild/
