--- a/ChatApp_1to1/app/src/main/AndroidManifest.xml
+++ b/ChatApp_1to1/app/src/main/AndroidManifest.xml
@@ -12,25 +12,31 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ChatApp_1to1"
         tools:targetApi="31">
+
+        <!-- 앱 시작은 임시로 LoginActivity -->
         <activity
-            android:name=".MainActivity2"
+            android:name=".LoginActivity"
             android:exported="true"
-            android:theme="@style/Theme.ChatApp_1to1">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.ChatApp_1to1.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- 로그인 후 이동할 메인 화면 -->
+        <activity
+            android:name=".StartActivity"
+            android:exported="true"
+            android:theme="@style/Theme.ChatApp_1to1" />
+
+        <!-- 회원가입 -->
+        <activity
+            android:name=".SignupActivity"
+            android:exported="true"
+            android:theme="@style/Theme.ChatApp_1to1.NoActionBar" />
+
+        <!-- 식물 키우기 기능 -->
         <activity
             android:name=".PlantCareActivity"
             android:exported="true" />
