게임페이지에서 물 버튼을 눌렀을 때 모달 창 제작 채팅 버튼을 눌렀을 때 코드 입력창으 로 이동 파이어베이스 연동 코드입력시 파이어베이스 데이터 저장

--- a/ChatApp_1to1/app/src/main/AndroidManifest.xml
+++ b/ChatApp_1to1/app/src/main/AndroidManifest.xml
@@ -42,7 +42,15 @@
             android:exported="true" />
 
         <!-- 코드 페이지 -->
-        <activity android:name=".CodeInputActivity" />
+        <activity
+            android:name=".CodeInputActivity"
+            android:exported="true"
+            android:launchMode="singleTop">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
 
     </application>
 
