--- a/ChatApp_1to1/app/src/main/AndroidManifest.xml
+++ b/ChatApp_1to1/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
 
         <!-- 앱 시작은 임시로 LoginActivity -->
         <activity
-            android:name=".LoginActivity"
+            android:name=".PlantCareActivity"
             android:exported="true"
             android:theme="@style/Theme.ChatApp_1to1.NoActionBar">
             <intent-filter>
