feat : Item Modal UI 띄우며 파이어베이스 Json 받아오기
- rooms -> users 2명의 공용 Json 세팅 후 팀원에게 공유 (파이어베이스 화분레벨타입, 아이템갯수, 코디아이템가격구매여부착용여부 등 세팅완료)
- gpt 를 이용한 코딩으로
모달 .xml 제작 그리고 .kt 에서
띄우고 아이템 렌더링 구현
error : 아직 api로 제대로 받아오진 않는다.

--- a/ChatApp_1to1/app/src/main/AndroidManifest.xml
+++ b/ChatApp_1to1/app/src/main/AndroidManifest.xml
@@ -18,10 +18,7 @@
             android:name=".LoginActivity"
             android:exported="true"
             android:theme="@style/Theme.ChatApp_1to1.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+
         </activity>
 
         <!-- 로그인 후 이동할 메인 화면 -->
@@ -40,7 +37,14 @@
         <activity
             android:name=".PlantCareActivity"
             android:exported="true"
-            android:theme="@style/Theme.ChatApp_1to1.NoActionBar" />
+            android:theme="@style/Theme.ChatApp_1to1.NoActionBar">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
 
     </application>
 </manifest>
