--- a/ChatApp_1to1/app/src/main/AndroidManifest.xml
+++ b/ChatApp_1to1/app/src/main/AndroidManifest.xml
@@ -20,7 +20,10 @@
             android:name=".LoginActivity"
             android:exported="true"
             android:theme="@style/Theme.ChatApp_1to1.NoActionBar">
-
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
         <!-- 로그인 후 이동할 메인 화면 -->
@@ -39,12 +42,7 @@
         <activity
             android:name=".PlantCareActivity"
             android:exported="true"
-            android:theme="@style/Theme.ChatApp_1to1.NoActionBar">
-
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:theme="@style/Theme.ChatApp_1to1.NoActionBar"
         </activity>
 
 
