--- a/ChatApp_1to1/app/src/main/AndroidManifest.xml
+++ b/ChatApp_1to1/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         <activity
             android:name=".StartActivity"
             android:exported="true"
-            android:theme="@style/Theme.ChatApp_1to1" />
+            android:theme="@style/Theme.ChatApp_1to1.NoActionBar" />
 
         <!-- 회원가입 -->
         <activity
