--- a/ChatApp_1to1/app/src/main/AndroidManifest.xml
+++ b/ChatApp_1to1/app/src/main/AndroidManifest.xml
@@ -55,6 +55,7 @@
 
         <activity
             android:name=".ChatActivity"
+            android:exported="false"
             android:windowSoftInputMode="adjustResize" />
 
     </application>
